tests/error/comptime/check_inplace_construct4.bz
// error: invalid construction of an object of type 'i32'
// note: while evaluating expression at compile time
// note: address points to an element in this allocation, which was freed
// note: allocation was made while evaluating expression at compile time
// note: allocation was freed here
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc(i32, 1);
		__builtin_comptime_free(p);

		__builtin_inplace_construct(p, 0);
	});
}
